# mcp-google-forms

./: .gitignore  LICENSE  README.md  README.th.md  mcp_google_forms.py  pyproject.toml  server.json  server.py  smithery.yaml
.github/: FUNDING.yml
docs/en/tools/: add_multiple_choice_question.md  add_section_header.md  add_text_question.md  add_true_false_question.md  auth_status.md  batch_add_true_false.md  create_quiz_form.md  delete_question.md  get_form.md  get_response.md  list_questions.md  list_responses.md  move_question.md  raw_batch_update.md  rename_form.md  set_quiz_mode.md  update_question_title.md  update_true_false_answer.md  verify_answer_keys.md
docs/th/tools/: add_multiple_choice_question.md  add_section_header.md  add_text_question.md  add_true_false_question.md  auth_status.md  batch_add_true_false.md  create_quiz_form.md  delete_question.md  get_form.md  get_response.md  list_questions.md  list_responses.md  move_question.md  raw_batch_update.md  rename_form.md  set_quiz_mode.md  update_question_title.md  update_true_false_answer.md  verify_answer_keys.md
