[project]
name = "mcp-google-forms"
version = "1.0.0"
description = "MCP server for managing Google Forms — quizzes, grading, images, responses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — © 2026 likezara" }
authors = [
    { name = "Kamaru", email = "k.kamarux@gmail.com" },
]
maintainers = [
    { name = "likezara", email = "contact@likezara.com" },
]
keywords = ["mcp", "google-forms", "quiz", "likezara"]

[project.urls]
Funding = "https://ko-fi.com/kamaru"
"Commercial Inquiries" = "mailto:contact@likezara.com"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "mcp>=1.27.0",
]

[dependency-groups]
dev = [
    "pymupdf>=1.27.2.2",
]
